--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -30,6 +30,11 @@
     // $fz-subtitle: 20px;
     // $fz-text: 16px;
 
+    .plan {
+        &__content {
+            width: 70%;
+        }
+    }
 }
 @media (max-width: 991.98px) {
     /* Переменные */
@@ -46,6 +51,12 @@
 
     .photos {
         height: 200px;
+    }
+
+    .plan {
+        &__content {
+            width: 90%;
+        }
     }
 }
 @media (max-width: 767.98px) {
@@ -66,6 +77,12 @@
 
         &__slide {
             padding: 0 25px;
+        }
+    }
+
+    .plan {
+        &__content {
+            width: 100%;
         }
     }
 }
@@ -129,6 +146,30 @@
     .photos {
         &__slide {
             padding: 0 50px;
+        }
+    }
+
+    .plan {
+        &__point {
+            &::after {
+                top: 40px;
+                left: 20px;
+            }
+        }
+
+        &__number {
+            font-size: $fz-subtitle;
+            min-width: 40px;
+            min-height: 40px;
+            margin: 0 20px 0 0;
+        }
+
+        &__subtitle {
+            font-size: $fz-subtitle;
+        }
+
+        &__description {
+            font-size: $fz-text;
         }
     }
 }
