--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,6 +11,7 @@
 .wrapper {
 width: 100%;
 height: 100vh;
+overflow: hidden;
 
     &__bg {
         position: absolute;
@@ -244,6 +245,75 @@ $fz-text: 16px;
     }
 
     &__button-next {
+    }
+}
+
+.plan {
+    height: 100%;
+
+    &__container {
+    }
+
+    &__row {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    &__title {
+    }
+
+    &__content {
+        width: 60%;
+    }
+
+    &__point {
+        display: flex;
+        position: relative;
+            &::after {
+                content: '';
+                position: absolute;
+                top: 50px;
+                left: 25px;
+                width: 2px;
+                height: 100%;
+                background-color: $color-first;
+            }
+            &:last-child::after {
+                display: none;
+            }
+    }
+
+    &__number {
+        font-size: $fz-subtitle;
+        font-weight: 500;
+        background-color: #fff;
+        min-width: 50px;
+        min-height: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: $color-first 2px solid;
+        border-radius: 50%;
+        align-self: flex-start;
+        margin: 0 30px 0 0;            
+    }
+
+    &__text {
+        padding: 0 0 20px 0;
+        color: $color-second;
+    }
+
+    &__subtitle {
+        font-size: $fz-subtitle;
+        font-weight: 500;
+        margin: 0 0 10px 0;
+    }
+
+    &__description {
+        font-size: $fz-text;
     }
 }
 
