--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,11 +7,14 @@
     padding: 0 30px 0 15px;
     height: 100%;
 }
+/* Убираю скролл */
+body, html {
+    overflow: hidden;
+}
 /* Основная оболочка сайта */
 .wrapper {
 width: 100%;
 height: 100vh;
-overflow: hidden;
 
     &__bg {
         position: absolute;
@@ -28,7 +31,6 @@ overflow: hidden;
     }
 
     &__page {
-        overflow-y: hidden;
     }
 
     &__menu {
@@ -119,6 +121,7 @@ $fz-text: 16px;
 }
 
 .title {
+    text-align: center;
     color: $color-first;
     font-size: $fz-title;
     font-weight: 500;
