--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -49,6 +49,17 @@
         }
     }
 
+    .portfolio {
+        &__slider {
+            flex: 0 1 400px;
+        }
+
+        &__slide {
+            width: 350px;
+            height: 350px;
+        }
+    }
+
     .photos {
         height: 200px;
     }
@@ -63,12 +74,6 @@
     .main {
         &__row {
             width: 90%;
-        }
-    }
-
-    .portfolio {
-        &__slider {
-            flex: 0 1 250px;
         }
     }
 
@@ -124,7 +129,12 @@
 
     .portfolio {
         &__slider {
-            flex: 0 1 200px;
+            flex: 0 1 400px;
+        }
+
+        &__slide {
+            width: 300px;
+            height: 350px;
         }
     }
 
