--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -127,6 +127,13 @@
         }
     }
 
+    .advantages {
+        &__icon {
+            flex: 0 1 50px;
+            height: 50px;
+        }
+    }
+
     .portfolio {
         &__slider {
             flex: 0 1 400px;
