--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,7 +4,7 @@
 .container {
     max-width: 1140px;
     margin: 0 auto;
-    padding: 0 30px 0 15px;
+    padding: 0 15px 0 15px;
     height: 100%;
 }
 /* Убираю скролл */
@@ -128,6 +128,74 @@ $fz-text: 16px;
     margin: 0 0 40px 0;
 }
 
+.advantages {
+    height: 100%;
+
+    &__container {
+    }
+
+    &__row {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    &__title {
+    }
+
+    &__tabs {
+    }
+
+    &__items {
+        display: flex;
+        justify-content: space-around;
+        margin: 0 0 30px 0;
+    }
+
+    &__icon {
+        flex: 0 1 70px;
+        height: 70px;
+        cursor: pointer;
+        transition: 300ms;
+        background-position: center;
+        background-size: cover;
+
+        &_monitor {
+            background-image: url(../img/monitor.svg);
+            
+                &.active, &:hover {
+                    background-image: url(../img/monitor-active.svg);
+                }
+        }
+        &_like {
+            background-image: url(../img/like.svg);
+                &.active, &:hover {
+                    background-image: url(../img/like-active.svg);
+                }
+        }
+        &_presentation {
+            background-image: url(../img/presentation.svg);
+                &.active, &:hover {
+                    background-image: url(../img/presentation-active.svg);
+                }
+        }
+    }
+
+    &__text {
+    }
+
+    &__description {
+        color: $color-second;
+        font-size: $fz-text;
+        line-height: 1.2em;
+        display: none;
+            &.active {
+                display: block;
+            }
+    }
+}
+
 .portfolio {
     height: 100%;
 
@@ -181,11 +249,11 @@ $fz-text: 16px;
     }
 
     &__btn-prev {
-        left: calc(50% - 50px);
+        left: calc(48% - 50px);
     }
 
     &__btn-next {
-        left: calc(50% + 50px);
+        left: calc(48.5% + 50px);
     }
 }
 
