--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -69,6 +69,17 @@
             width: 90%;
         }
     }
+
+    .price {
+        &__column {
+            flex: 0 1 50%;
+            margin: 0 0 20px 0;
+        }
+    }
+
+    .card {
+        min-height: 250px;
+    }
 }
 @media (max-width: 767.98px) {
     .main {
@@ -182,12 +193,16 @@
         }
 
         &__text {
+            padding: 0 0 10px 0;
         }
 
         &__subtitle {
             font-size: $fz-subtitle;
-            margin: 0 0 5px 0;
+            margin: 0 0 20px 0;
             padding: 8px 0px 0 0;
+                &.active {
+                    margin: 0 0 10px 0;
+                }
         }
 
         &__description {
@@ -197,5 +212,20 @@
                     display: block;
                 }
         }
+    }
+
+    .price {
+        &__body {
+            height: 100%;
+        }
+
+        &__column {
+            flex: 0 1 100%;
+            margin: 0 0 20px 0;
+        }
+    }
+
+    .card {
+        min-height: 250px;
     }
 }
