--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -121,7 +121,7 @@
     /* Переменные */
     $fz-h1: 25px;
     $fz-title: 22px;
-    $fz-subtitle: 16px;
+    $fz-subtitle: 18px;
     $fz-text: 14px;
 
     .wrapper {
@@ -201,16 +201,13 @@
         }
 
         &__text {
-            padding: 0 0 10px 0;
+            padding: 0 0 20px 0;
         }
 
         &__subtitle {
             font-size: $fz-subtitle;
-            margin: 0 0 20px 0;
+            margin: 0 0 10px 0;
             padding: 8px 0px 0 0;
-                &.active {
-                    margin: 0 0 10px 0;
-                }
         }
 
         &__description {
@@ -223,7 +220,7 @@
     }
 
     .price {
-        padding: 50px 0;
+        padding: 20px 0 100px 0;
         &__body {
             height: 100%;
         }
@@ -250,12 +247,13 @@
         }
 
         &__contact {
+            font-size: $fz-subtitle;
             margin: 10px 0;
         }
     }
 
     .form-contacts {
-        padding: 10px;
+        padding: 30px 20px;
 
         &__title {
             font-size: $fz_subtitle;
@@ -274,10 +272,6 @@
         &__comment {
             font-size: $fz_text;
             padding: 10px 15px;
-        }
-
-        &__privacy {
-            font-size: 12px;
         }
 
         &__button {
