--- a/css/style.css
+++ b/css/style.css
@@ -1125,6 +1125,12 @@ body, html {
 
 @media (max-width: 575.98px) {
   /* Переменные */
+  .wrapper__page {
+    padding: 0 0 100px 0;
+  }
+  .wrapper__page:nth-child(6) {
+    padding: 0 0 0px 0;
+  }
   .wrapper .swiper-pagination-bullet {
     width: 15px;
     height: 15px;
@@ -1195,7 +1201,7 @@ body, html {
   .plan__description_1 {
     display: block;
   }
-  .price {
+  .price__slide {
     padding: 20px 0 100px 0;
   }
   .price__body {
