--- a/css/style.css
+++ b/css/style.css
@@ -159,14 +159,14 @@ body, html {
 }
 
 .main__subtitle {
-  color: #fff;
+  color: #000;
   font-size: 30px;
   line-height: 1em;
   margin: 0 0 40px 0;
 }
 
 .main__text {
-  color: #fff;
+  color: #000;
   font-size: 20px;
   line-height: 1.1em;
   margin: 0 0 40px 0;
@@ -260,7 +260,7 @@ body, html {
 }
 
 .advantages__description {
-  color: #fff;
+  color: #000;
   font-size: 16px;
   line-height: 1.2em;
   display: none;
@@ -308,20 +308,13 @@ body, html {
   display: block;
   height: 100%;
   width: 100%;
-  background-position: center;
-  background-size: cover;
 }
 
-.portfolio__screen_vsh {
-  background-image: url(../img/1.jpg);
-}
-
-.portfolio__screen_rww {
-  background-image: url(../img/2.jpg);
-}
-
-.portfolio__screen_ya {
-  background-image: url(../img/3.jpg);
+.portfolio__screen img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .portfolio__btn-prev, .portfolio__btn-next {
@@ -390,13 +383,13 @@ body, html {
 }
 
 .words__name {
-  color: #fff;
+  color: #000;
   font-size: 20px;
   margin: 0 0 20px 0;
 }
 
 .words__text {
-  color: #fff;
+  color: #000;
   font-size: 16px;
 }
 
@@ -487,7 +480,7 @@ body, html {
 
 .plan__text {
   padding: 0 0 20px 0;
-  color: #fff;
+  color: #000;
 }
 
 .plan__subtitle {
@@ -669,7 +662,7 @@ body, html {
 
 .contacts__contact {
   font-size: 20px;
-  color: #fff;
+  color: #000;
   margin: 20px 0;
 }
 
@@ -713,8 +706,8 @@ body, html {
 }
 
 .form-contacts__name:focus {
-  -webkit-box-shadow: 0 0 15px #fff;
-          box-shadow: 0 0 15px #fff;
+  -webkit-box-shadow: 0 0 15px #000;
+          box-shadow: 0 0 15px #000;
 }
 
 .form-contacts__phone {
@@ -726,8 +719,8 @@ body, html {
 }
 
 .form-contacts__phone:focus {
-  -webkit-box-shadow: 0 0 15px #fff;
-          box-shadow: 0 0 15px #fff;
+  -webkit-box-shadow: 0 0 15px #000;
+          box-shadow: 0 0 15px #000;
 }
 
 .form-contacts__comment {
@@ -740,8 +733,8 @@ body, html {
 }
 
 .form-contacts__comment:focus {
-  -webkit-box-shadow: 0 0 15px #fff;
-          box-shadow: 0 0 15px #fff;
+  -webkit-box-shadow: 0 0 15px #000;
+          box-shadow: 0 0 15px #000;
 }
 
 .form-contacts__checkbox {
@@ -919,8 +912,8 @@ body, html {
 }
 
 .popup__name:focus {
-  -webkit-box-shadow: 0 0 15px #fff;
-          box-shadow: 0 0 15px #fff;
+  -webkit-box-shadow: 0 0 15px #000;
+          box-shadow: 0 0 15px #000;
 }
 
 .popup__phone {
@@ -932,8 +925,8 @@ body, html {
 }
 
 .popup__phone:focus {
-  -webkit-box-shadow: 0 0 15px #fff;
-          box-shadow: 0 0 15px #fff;
+  -webkit-box-shadow: 0 0 15px #000;
+          box-shadow: 0 0 15px #000;
 }
 
 .popup__comment {
@@ -946,8 +939,8 @@ body, html {
 }
 
 .popup__comment:focus {
-  -webkit-box-shadow: 0 0 15px #fff;
-          box-shadow: 0 0 15px #fff;
+  -webkit-box-shadow: 0 0 15px #000;
+          box-shadow: 0 0 15px #000;
 }
 
 .popup__checkbox {
@@ -1150,6 +1143,9 @@ body, html {
   .main__link {
     font-size: 14px;
   }
+  .title {
+    margin: 0 0 30px 0;
+  }
   .advantages__icon {
     -webkit-box-flex: 0;
         -ms-flex: 0 1 50px;
@@ -1171,7 +1167,7 @@ body, html {
             flex: 0 1 100%;
   }
   .reviews__column_w {
-    margin: 0 0 50px 0;
+    margin: 0 0 30px 0;
   }
   .words {
     text-align: center;
@@ -1220,7 +1216,7 @@ body, html {
     -webkit-box-flex: 0;
         -ms-flex: 0 1 100%;
             flex: 0 1 100%;
-    margin: 0 0 15px 0;
+    margin: 0 0 10px 0;
   }
   .contacts__column:last-child {
     -webkit-box-flex: 0;
