--- a/scss/style.scss
+++ b/scss/style.scss
@@ -57,8 +57,8 @@ height: 100vh;
 body, html {font-family: 'Montserrat', sans-serif;}
 /* Переменные */
 $color-first: #a6e64d;
-$color-second: #fff;
-$color-third: #fff;
+$color-second: #000;
+$color-third: #000;
 $fz-h1: 40px;
 $fz-title: 30px;
 $fz-subtitle: 20px;
@@ -231,17 +231,11 @@ $fz-text: 16px;
         display: block;
         height: 100%;
         width: 100%;
-        background-position: center;
-        background-size: cover;
-        &_vsh {
-            background-image: url(../img/1.jpg);
-        }
-        &_rww {
-            background-image: url(../img/2.jpg);
-        }
-        &_ya {
-            background-image: url(../img/3.jpg);
-        }
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
     }
 
     &__btn-prev, &__btn-next {
