--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,7 @@ body, html {
 .wrapper {
   width: 100%;
   height: 100vh;
+  background-color: #f7f7f7;
 }
 
 .wrapper__bg {
@@ -101,7 +102,7 @@ body, html {
   width: 100%;
   height: 130%;
   background-size: cover;
-  background-position: center;
+  background-position: 0 0;
   background-repeat: no-repeat;
 }
 
