--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,6 +15,7 @@ body, html {
 .wrapper {
 width: 100%;
 height: 100vh;
+background-color: #f7f7f7;
 
     &__bg {
         position: absolute;
@@ -23,7 +24,7 @@ height: 100vh;
         width: 100%;
         height: 130%;
         background-size: cover;
-        background-position: center;
+        background-position: 0 0;
         background-repeat: no-repeat;
     }
 
