--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,7 @@ body, html {
   width: 100%;
   height: 100vh;
   background-color: #f7f7f7;
+  position: relative;
 }
 
 .wrapper__bg {
@@ -102,7 +103,7 @@ body, html {
   width: 100%;
   height: 130%;
   background-size: cover;
-  background-position: 0 0;
+  background-position: center;
   background-repeat: no-repeat;
 }
 
@@ -437,6 +438,7 @@ body, html {
 }
 
 .plan__point {
+  padding: 0 0 20px 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -455,6 +457,10 @@ body, html {
 
 .plan__point:last-child::after {
   display: none;
+}
+
+.plan__point:last-child {
+  padding: 0;
 }
 
 .plan__number {
@@ -480,7 +486,6 @@ body, html {
 }
 
 .plan__text {
-  padding: 0 0 20px 0;
   color: #000;
 }
 
@@ -1059,6 +1064,9 @@ body, html {
 
 @media (max-width: 991.98px) {
   /* Переменные */
+  .wrapper__bg {
+    background-position: 0 0;
+  }
   .main__row {
     width: 70%;
   }
@@ -1119,6 +1127,10 @@ body, html {
 
 @media (max-width: 575.98px) {
   /* Переменные */
+  .wrapper__bg {
+    left: 0;
+    background-position: 0 0;
+  }
   .wrapper__page {
     padding: 0 0 100px 0;
   }
@@ -1183,12 +1195,8 @@ body, html {
     min-height: 40px;
     margin: 0 10px 0 0;
   }
-  .plan__text {
-    padding: 0 0 20px 0;
-  }
   .plan__subtitle {
     font-size: 18px;
-    margin: 0 0 10px 0;
     padding: 8px 0px 0 0;
   }
   .plan__description {
@@ -1229,7 +1237,7 @@ body, html {
     margin: 10px 0;
   }
   .form-contacts {
-    padding: 30px 20px;
+    padding: 20px;
   }
   .form-contacts__title {
     font-size: 18px;
