--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,6 +16,7 @@ body, html {
 width: 100%;
 height: 100vh;
 background-color: #f7f7f7;
+position: relative;
 
     &__bg {
         position: absolute;
@@ -24,7 +25,7 @@ background-color: #f7f7f7;
         width: 100%;
         height: 130%;
         background-size: cover;
-        background-position: 0 0;
+        background-position: center;
         background-repeat: no-repeat;
     }
 
@@ -364,6 +365,7 @@ $fz-text: 16px;
     }
 
     &__point {
+        padding: 0 0 20px 0;
         display: flex;
         position: relative;
             &::after {
@@ -377,6 +379,9 @@ $fz-text: 16px;
             }
             &:last-child::after {
                 display: none;
+            }
+            &:last-child {
+                padding: 0;
             }
     }
 
@@ -396,7 +401,6 @@ $fz-text: 16px;
     }
 
     &__text {
-        padding: 0 0 20px 0;
         color: $color-second;
     }
 
